add Heather feedback and some changes from discussion with Sharon

--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -31,13 +31,15 @@
         href: "/forms/education/declaration.html"
       }) }}
 
-  
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>content of this page to be redrafted, add warning about only using the back link in the form, and unable to edit(?) - remove enrolment term</p>
-          <p>PLEASE NOTE: on the following pages I didn't put a heading "Apply etc..." but there will be one, and we want to remove the privacy statement as it's in the footer - to confirm with Sarah Jane probably.</p>
-      </div>
     </div>
+</div>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>content of this page to be redrafted</li> 
+        <li>warning about only using the back link in the form, and unable to edit(?)</li>
+        <li>Reference to make yourself familiar to the admission policy</li>
+    </ul>
 </div>
 
 {% endblock %}
