--- a/app/views/forms/education/child-dob.html
+++ b/app/views/forms/education/child-dob.html
@@ -54,7 +54,8 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>Could we have some validation on the DOB? even if it's just checking that the year is either 2013 or 2014?</p>    
+          <p>Data will be validated and need to be between: 01/03/2013 – 28/02/2015 </p>    
+          <p>Ideally we would also want some validation on the date - is a real date (not the 31 of February)</p>
       </div>
     </div>
 </div>
