--- a/app/views/forms/education/defer.html
+++ b/app/views/forms/education/defer.html
@@ -44,6 +44,10 @@
         }) }}
 
       </form>
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>guidance will be provided</p>    
+      </div>
     </div>
 </div>
 
