--- a/app/views/forms/education/denominational-or-non.html
+++ b/app/views/forms/education/denominational-or-non.html
@@ -21,7 +21,7 @@
         name: "school",
         fieldset: {
           legend: {
-            text: "Select one school",
+            text: "Select your preferred catchment school",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
