--- a/app/views/forms/education/email.html
+++ b/app/views/forms/education/email.html
@@ -18,7 +18,7 @@
       {{ govukInput({
         label: {
           text: "Email (optional)",
-          classes: "govuk-!-font-size-27"
+          classes: "govuk-!-font-size-24"
         },
         hint: {
           text: "We'll use this to confirm your application and what you need to do next."
@@ -34,12 +34,11 @@
         "text": "Continue"
         }) }}
       </form>
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>We are validating the email format. Could we make sure autocomplete and email type of input will be selected to hopefully reduce risk or input errors? If it's error prone, we might add a verification of the email later on</p>
-          <p><a href="https://design-system.service.gov.uk/patterns/email-addresses/" target="_blank" rel="noopener"> guidance on email address GDS</a></p>
-      </div>
     </div>
 </div>
-
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <p>We are validating the email format. In most cases, the email will start autocomplete once you start typing it which should reduce error risks. If it's error prone, we might add a verification of the email later on</p>
+    <p><a href="https://design-system.service.gov.uk/patterns/email-addresses/" target="_blank" rel="noopener"> guidance on email address GDS</a></p>
+</div>
 {% endblock %}
