--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -13,10 +13,11 @@
             Apply online for primary 1 August 2019
         </h1>
       <h2 class="govuk-heading-m">
-          If you catchment school is full
+          Other information
         </h2>
-      <p>We need some further information in case your catchment school is full.</p>
-      <p>We’ll ask you to provide proof of these answers later in the process.</p>
+      <p>Required in cases where catchment school applied for is oversubscribed</p>
+      <!--p>We need some further information in case your catchment school is full.</p>
+      <p>We’ll ask you to provide proof of these answers later in the process.</p-->
 
       {{ govukButton({
         "text": "Continue",
@@ -25,8 +26,9 @@
 
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>The content will be different, this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. This is the screen just before selecting the alternative school so we will need to explain here briefly what happen is they pick another school, if they select None (you could be in any school) and that they can't pick the same school again.</p>
+          <p>The content will be different, we will refer to the original application form , this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. </p>
           <p>After this page, we remove all texts which was there previously mentioning "if your catchment school is full" to avoid adding stress by repetition.</p>
+          <p>Heather's note: with this statement it would be helpful to refer the applicant to the policy again</p>
       </div>
     </div>
 </div>
