--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -46,7 +46,8 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>This will be re-worded to make sure parents understand wy we ask and what conditions are relevant or not</p>
+          <p>This will be re-worded to make sure parents understand why we ask and what conditions are relevant or not - it should be question 2 of the priority questions</p>
+          <p>Heather: revise the wording to reflect original question on current application form </p>
       </div>
     </div>
 </div>
