--- a/app/views/forms/education/moving.html
+++ b/app/views/forms/education/moving.html
@@ -44,12 +44,14 @@
         "text": "Continue"
         }) }}
       </form>
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>content, including heading to be drafted. We will need to know their current postcode and use a texbox for it as it could be outside the UK. We will also need the date they are moving in to the new ERC address</p>
-          <p>it might all be on this page, or depending on the yes/no going to and extra page to collect the postcode and the moving in  date</p>
-      </div>
     </div>
 </div>
-
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>content, including heading to be drafted</li> 
+      <li>we will need to know their current postcode, use a text box for it as it could be outside the UK</li>
+      <li>we will also need the date they are moving in to the new ERC address</li>
+  </ul>
+</div>
 {% endblock %}
