--- a/app/views/forms/education/postcode-with-address.html
+++ b/app/views/forms/education/postcode-with-address.html
@@ -21,7 +21,7 @@
 
       {{ govukInput({
         label: {
-          text: "Building number (optional)"
+          text: "Building number"
         },
         classes: "govuk-input--width-5 validated input-read-only",
         id: "addr-number",
@@ -67,5 +67,8 @@
 
     </div>
 </div>
-
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+  <p>removed 'optional' next to building</p>
+</div>
 {% endblock %}
