--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -41,8 +41,13 @@
     <!--p><a href="manual-address.html">My postcode is not recognised</a></p-->
     <div class="design-notes-box">
         <h3 class="govuk-heading-s">Design notes:</h3>
-        <p>Content  changes to make sure they understand it's the address the child will be living at, at the start of the term - As to be an ERC postcode</p>
-        <p>If the address is not found (new houses in ERC), we will have  the same message for everyone, Maidenhill is not treated differently, and possibly a link to the schools websites and a phone number to contact the admission team</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Content changes to make sure they understand it's the address the child will be living at, at the start of the term</li>
+          <li>Has to be an ERC postcode</li>
+          <li>If the address is not found (new houses in ERC), we will have  the same message for everyone</li>
+          <li>Maidenhill is not treated differently</li>
+          <li>possibly a link to the schools websites and a phone number to contact the admission team</li>
+        </ul>
     </div>
     </div>
 </div>
