--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -44,6 +44,10 @@
         }) }}
 
       </form>
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>rewording needed to make clear the sibling is in attendance at the school when the P1 starts in August</p>    
+      </div>
     </div>
 </div>
 
