--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -21,7 +21,7 @@
 
       {{ govukPanel({
         titleText: "Application complete",
-        html: "Your reference number<br><strong>HDJ2123F</strong>"
+        html: "Your reference number<br><strong>1346-7895-4445-7023</strong>"
       }) }}
 
     {% if data['email'] %}
@@ -38,10 +38,15 @@
 
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>guidance about what happen next will be drafted so we set expectations. At the moment, the text stating we have send an email only appears if an email address was entered. Could we maybe add the email address it was sent to on screen? (help the user in case they put a wrong email address and don't receive anything. How long does it take to receive the email - should we mention what to do if you didn't receive it within (10min? more) check their spam?</p>
-          <p>anything we will send in the email should also appear here as some won't receive it, and other will lose the email.</p>
-          <p>personalised "letter" will be here (as a link? in full?) maybe provide guidance about how to print or save as a pdf?</p>
-          <p>do we want a quick survey link to see what they think of the service?</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>guidance about what happen next will be drafted so we set expectations</li>
+            <li>at the moment, the text stating we have send an email only appears if an email address was entered. Could we maybe add the email address it was sent to on screen? (help the user in case they put a wrong email address and don't receive anything</li>
+            <li>email should be receive nearly instantly - should we mention what to do if you didn't receive it to check their spam?</li>
+            <li>anything we will send in the email should also appear here as some won't receive it, and other will lose the email</li>
+            <li>personalised "letter" will be here (as a link? in full?) maybe provide guidance about how to print or save as a pdf?</li>
+            <li>do we want a quick survey link to see what they think of the service?</li>
+            <li>should have a link to the documents they need to apply + Admission policy + placing request policy + Heather</li>
+          </ul>
       </div>
     </div>
   </div>
