--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -128,6 +128,10 @@
         }) }}
 
     </form>
+    <div class="design-notes-box">
+        <h3 class="govuk-heading-s">Design notes:</h3>
+        <p>provide information page before making selection </p>    
+    </div>
     </div>
 </div>
 
