--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -67,6 +67,7 @@
         <div class="design-notes-box">
             <h3 class="govuk-heading-s">Design notes:</h3>
             <p>As we have removed the term 'older' in the previous pages, we can now have the option of P1 in the list for the parents of twins, to make sure they are not stuck on this question.</p>
+            <p>question will need to be re-worded as previous one to make sure the sibling is at the school when the P1 starts - Heather</p>
         </div>
     </div>
 </div>
